# ppserver

./: .clang-format  CMakeLists.txt  Dockerfile  README.md  vcpkg.json
src/: CMakeLists.txt  main.cpp  predictor.cpp  predictor.h
src/pointpillar/: CMakeLists.txt  main.cpp
src/pointpillar/common/: check.hpp  dtype.hpp  launch.cuh  tensor.cu  tensor.hpp  tensorrt.cpp  tensorrt.hpp  timer.hpp
src/pointpillar/pointpillar/: lidar-backbone.cu  lidar-backbone.hpp  lidar-postprocess.cu  lidar-postprocess.hpp  lidar-voxelization.cu  lidar-voxelization.hpp  pillarscatter-kernel.cu  pillarscatter-kernel.hpp  pointpillar-scatter.cpp  pointpillar-scatter.hpp  pointpillar.cpp  pointpillar.hpp
